gap fix

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -292,6 +292,7 @@ box-shadow: 0 10px 30px rgba(249, 115, 22, 0.4);
 
     .footer-bottom-left{
         font-size: 14px;
+        margin-bottom: 0;
         order: 2;
     }
     .anchor-link{
